--- a/index.html
+++ b/index.html
@@ -10,25 +10,23 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header" id="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a>главная</a>
+          <li class="header__links-list-item header__links-list-item_activ ">
+            <a class="link_no-bullit" href="#header">главная</a>
           </li>
-          <li class="header__links-list-item header__links-list-item_bullit">
-            <a>посмотреть лоты</a>
+          <li class="header__links-list-item ">
+            <a class="link_bullit" href="#lots">посмотреть лоты</a>
           </li>
-          <li class="header__links-list-item header__links-list-item_bullit">
-            <a>об аукционе</a>
+          <li class="header__links-list-item ">
+            <a class="link_bullit" href="#about">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <div class="header__logo">
-        <a>
-          <img class="header__logo-image" src="images/logo-black.svg" alt="" />
-        </a>
-      </div>
+      <a class="header__logo">
+          <img class="header__logo-image" src="images/logo-black.svg" alt="логотип оно тебе надо" />
+      </a>
       <address class="address header__address">
         <a class="address_tel" href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
@@ -49,15 +47,15 @@
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">Сделать ставку</button>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
       </section>
 
-      <section class="lots">
+      <section class="lots" id="lots">
         <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <a class="card-link">
+            <a class="card-link" href="">
               <article class="overlay card card_type_film">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -72,7 +70,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link">
+            <a class="card-link" href="">
               <article class="card card_type_book">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -90,7 +88,7 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link">
+            <a class="card-link" href="">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
                 <h3 class="card__title">
@@ -106,15 +104,15 @@
             </a>
           </li>
         </ul>
-        <div class="card_link_buttom">
-          <a class="lots__look-more-link"> Посмотреть больше </a>
-        </div>
+        <a class="lots__look-more-link" href="">
+           Посмотреть больше
+        </a>
       </section>
 
-      <section class="about">
+      <section class="about" id="about">
         <div class="about-logo">
           <div class="background-logo">
-            <img class="about__logo-image" src="images/logo-white.svg" alt=""/>
+            <img class="about__logo-image" src="images/logo-white.svg" alt="логотип оно тебе надо"/>
           </div>
         </div>
         <div class="about__column">
@@ -150,30 +148,30 @@
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link_active"> главная </a>
+            <a class="footer__menu-link_active" href="#header"> главная </a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link"> посмотреть лоты </a>
+            <a class="footer__menu-link" href="#lots"> посмотреть лоты </a>
           </li>
           <li class="footer__menu-list-item">
-            <a class="footer__menu-link"> об аукционе </a>
+            <a class="footer__menu-link" href="#about"> об аукционе </a>
           </li>
         </ul>
       </nav>
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img class="footer__social-icon" src="images/yt.svg" alt=""/>
+            <img class="footer__social-icon" src="images/yt.svg" alt="логотип ютуб"/>
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img class="footer__social-icon" src="images/vk.svg" alt=""/>
+            <img class="footer__social-icon" src="images/vk.svg" alt="логотив вконтакте"/>
           </a>
         </li>
         <li class="footer__social-list-item">
           <a class="footer__social-link">
-            <img class="footer__social-icon" src="images/pinterest.svg" alt=""/>
+            <img class="footer__social-icon" src="images/pinterest.svg" alt="логотип принтерес"/>
           </a>
         </li>
       </ul>
